syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = ".;proto";

service User {
  rpc GetUserList(PageInfo) returns (UserListResponse);//用户列表
  rpc GetUserMobile(MobileRequest) returns(UserInfoResponse);//通过mobile查询用户
  rpc GetUserId(IdRequest) returns(UserInfoResponse);//通过id查询用户
  rpc CreateUser(CreateUserInfo) returns(UserInfoResponse);//添加用户
  rpc UpdateUser(UpadteUserInfo) returns(google.protobuf.Empty);
  rpc CheckPassWord(PasswordCheckInfo) returns(CheckResponse);
}

message PasswordCheckInfo {
  string password = 1;
  string encryptedPassword = 2;
}

message CheckResponse {
  bool success = 1;
}

message PageInfo {
  uint32 pn = 1;
  uint32 pSize = 2;
}
message MobileRequest {
  string mobile = 1;
}

message IdRequest {
  int32 id = 1;
}

message CreateUserInfo {
  string nickName = 1;
  string passWord = 2;
  string mobile = 3;
}

message UpadteUserInfo {
  int32 id = 1;
  string nickName = 2;
  string gender = 3;
  int64 birthday = 4;
}

message UserInfoResponse {
  int32 id = 1;
  string password = 2;
  string mobile = 3;
  string nickName = 4;
  uint64 birthDay = 5;
  string gender = 6;
  uint32 role = 7;
}

message UserListResponse {
  int32 total = 1;
  repeated UserInfoResponse data = 2;
}